fixed linecount not showing

--- a/public/css/prism.css
+++ b/public/css/prism.css
@@ -1,57 +1,51 @@
+/* http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript+java+php+coffeescript+bash+c+cpp+python+ruby+csharp+haskell+swift+objectivec&plugins=line-highlight+line-numbers+autolinker */
 /**
- * prism.js Monokai theme for CSS & Sass/Scss
- *
- * @todo test for JavaScript & HTML
- *
- * @author @MoOx
+ * okaidia theme for JavaScript, CSS and HTML
+ * Loosely based on Monokai textmate theme by http://www.monokai.nl/
+ * @author ocodia
  */
-/* line 35, syntax-highlighting.scss */
+
 code[class*="language-"],
 pre[class*="language-"] {
+  color: #f8f8f2;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  font-family: Consolas, Monaco, 'Andale Mono', monospace;
+  direction: ltr;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  line-height: 1.5;
+
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
+
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
-  font-family: Menlo, Monaco, "Courier New", monospace;
-  font-size: 12px;
-  line-height: 18px;
-  color: white;
-  text-shadow: none;
 }
 
-
-/* line 61, syntax-highlighting.scss */
-pre[class*="language-"],
-:not(pre) > code[class*="language-"] {
-  background: #2a2a2a;
-}
-
-/* line 66, syntax-highlighting.scss */
+/* Code blocks */
 pre[class*="language-"] {
-  padding: 15px;
-  border-radius: 4px;
-  border: 1px solid #e1e1e8;
+  padding: 1em;
+  margin: .5em 0;
+  overflow: auto;
+  border-radius: 0.3em;
 }
 
-/* line 85, syntax-highlighting.scss */
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #272822;
+}
+
+/* Inline code */
 :not(pre) > code[class*="language-"] {
-  padding: .15em .2em .05em;
+  padding: .1em;
   border-radius: .3em;
-  border: 0.13em solid #7a6652;
-  box-shadow: 1px 1px .3em -.1em black inset;
 }
 
-/* line 92, syntax-highlighting.scss */
-.namespace {
-  opacity: .7;
-}
 
 /* line 100, syntax-highlighting.scss */
 .token.comment, .token.prolog, .token.doctype, .token.cdata {
@@ -105,56 +99,6 @@ pre[class*="language-"] {
   color: red;
 }
 
-/* line 164, syntax-highlighting.scss */
-pre[data-line] {
-  position: relative;
-  padding: 1em 0 1em 3em;
-}
-
-/* line 169, syntax-highlighting.scss */
-.line-highlight {
-  position: absolute;
-  left: 0;
-  right: 0;
-  padding: inherit 0;
-  margin-top: 1em;
-  background: rgba(255, 255, 255, 0.08);
-  pointer-events: none;
-  line-height: inherit;
-  white-space: pre;
-}
-
-/* line 185, syntax-highlighting.scss */
-.line-highlight:before,
-.line-highlight[data-end]:after {
-  content: attr(data-start);
-  position: absolute;
-  top: .4em;
-  left: .6em;
-  min-width: 1em;
-  padding: 0.2em .5em;
-  background-color: rgba(255, 255, 255, 0.4);
-  color: black;
-  font: bold 65%/1 sans-serif;
-  height: 1em;
-  line-height: 1em;
-  text-align: center;
-  border-radius: 999px;
-  text-shadow: none;
-  box-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
-}
-
-/* line 207, syntax-highlighting.scss */
-.line-highlight[data-end]:after {
-  content: attr(data-end);
-  top: auto;
-  bottom: .4em;
-}
-
-/******************************************************************
-CODE - SWITCH COLORS A BIT DEPENDING ON LANGUAGE
-******************************************************************/
-/* line 216, syntax-highlighting.scss */
 code.language-markup {
   color: #f9f9f9;
 }
@@ -179,31 +123,97 @@ code.language-markup .token.script .token.keyword {
   color: white;
 }
 
-/******************************************************************
-CODE  - PRISM THEME OVERRIDES
-******************************************************************/
-/* line 241, syntax-highlighting.scss */
-code[class*="language-"],
-pre[class*="language-"] {
-  white-space: pre !important;
-  word-wrap: normal !important;
-  overflow: auto;
-  max-height: 610px;
+pre[data-line] {
+  position: relative;
+  padding: 1em 0 1em 3em;
 }
 
-/* line 251, syntax-highlighting.scss */
-pre {
+.line-highlight {
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: inherit 0;
+  margin-top: 1em; /* Same as .prism’s padding-top */
+
+  background: hsla(24, 20%, 50%,.08);
+  background: -moz-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+  background: -webkit-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+  background: -o-linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+  background: linear-gradient(left, hsla(24, 20%, 50%,.1) 70%, hsla(24, 20%, 50%,0));
+  
+  pointer-events: none;
+  
+  line-height: inherit;
+  white-space: pre;
+}
+
+  .line-highlight:before,
+  .line-highlight[data-end]:after {
+    content: attr(data-start);
+    position: absolute;
+    top: .4em;
+    left: .6em;
+    min-width: 1em;
+    padding: 0 .5em;
+    background-color: hsla(24, 20%, 50%,.4);
+    color: hsl(24, 20%, 95%);
+    font: bold 65%/1.5 sans-serif;
+    text-align: center;
+    vertical-align: .3em;
+    border-radius: 999px;
+    text-shadow: none;
+    box-shadow: 0 1px white;
+  }
+  
+  .line-highlight[data-end]:after {
+    content: attr(data-end);
+    top: auto;
+    bottom: .4em;
+  }
+pre.line-numbers {
+  position: relative;
+  padding-left: 3.8em;
+  counter-reset: linenumber;
+}
+
+pre.line-numbers > code {
   position: relative;
 }
-/* line 254, syntax-highlighting.scss */
-pre:before {
+
+.line-numbers .line-numbers-rows {
   position: absolute;
+  pointer-events: none;
   top: 0;
-  left: 0;
-  width: 100%;
-  padding: .5em 0;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #333333), color-stop(100%, #000000));
-  background: -webkit-linear-gradient(#333333, #000000);
+  font-size: 100%;
+  left: -3.8em;
+  width: 3em; /* works for line-numbers below 1000 lines */
+  letter-spacing: -1px;
+  border-right: 1px solid #999;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+}
+
+  .line-numbers-rows > span {
+    pointer-events: none;
+    display: block;
+    counter-increment: linenumber;
+  }
+
+    .line-numbers-rows > span:before {
+      content: counter(linenumber);
+      color: #999;
+      display: block;
+      padding-right: 0.8em;
+      text-align: right;
+    }
+.token a {
+  color: inherit;
+}
+ent(#333333, #000000);
   background: -moz-linear-gradient(#333333, #000000);
   background: -o-linear-gradient(#333333, #000000);
   background: linear-gradient(#333333, #000000);
